# rust-social-bookmarking

./: .gitignore  Cargo.toml  README.md  _env  docker-compose.yml
migrations/2020-11-15-221917_create_user_id/: down.sql  up.sql
migrations/2020-11-15-222013_create_user/: up.sql
migrations/2020-11-15-222013_create_users/: up.sql
migrations/2020-11-21-042829_create_credential_id/: down.sql  up.sql
migrations/2020-11-21-051616_create_credential/: up.sql
migrations/2020-11-21-051725_create_credential_verified/: down.sql  up.sql
migrations/2020-11-21-052046_create_credential_verification/: down.sql  up.sql
migrations/2020-11-21-052117_create_credential_password_reset/: down.sql  up.sql
migrations/2020-11-28-223420_create_bookmark_id/: down.sql  up.sql
migrations/2020-11-28-223456_create_bookmark/: down.sql  up.sql
src/: app.rs  bookmark.rs  bookmark_repository.rs  bookmark_repository_impl.rs  bookmark_title.rs  bookmark_url.rs  mail_address.rs  main.rs  password.rs  schema.rs  send_mail_service.rs  send_mail_service_impl.rs  session_service.rs  session_service_impl.rs  user.rs  user_dao.rs  user_key.rs  user_repository.rs  user_repository_impl.rs  verify_user_secret.rs  verify_user_use_case.rs
src/cli/: console_send_mail_service.rs  env.rs  fs_session_service.rs  mod.rs
src/entity/: bookmark.rs  bookmark_comment.rs  bookmark_id.rs  bookmark_key.rs  bookmark_title.rs  bookmark_url.rs  credential.rs  credential_id.rs  credential_secret.rs  credential_secret_expired_at.rs  credential_secret_with_expiration.rs  credential_status.rs  mail_address.rs  mod.rs  (+8 more)
(+44 files in other folders)
