[package]
name = "social-bookmarking"
version = "0.1.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
chrono = "0.4.19"
diesel = { version = "1.4.5", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
rand = "0.7.3"
sha2 = "0.9.2"
clap = "2.33.3"
